--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -24,6 +24,9 @@ jobs:
         python -m pip install --upgrade pip
         pip install flake8 pytest
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+    - name: Create dir
+      run: |
+          mkdir tmp
     - name: Create Google Services JSON File
       env:
           GOOGLE_SERVICES_JSON: ${{ secrets.GOOGLE_ACCOUNT }}
