--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -29,7 +29,7 @@ jobs:
           mkdir tmp
     - name: Create Google Services JSON File
       env:
-          GOOGLE_SERVICES_JSON: ${{ secrets.GOOGLE_ACCOUNT }}
+          GOOGLE_SERVICES_JSON: ${{ secrets.GOOGLE_SERVICE_ACCOUNT }}
       run: echo $GOOGLE_SERVICES_JSON | base64 -di > tmp/service_account.json
     - name: Update calendar
       run: |
